<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        android:id="@+id/guideLine1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_30sdp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideLine1"
        android:textColor="@color/mainColor"
        android:id="@+id/txt_login"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back_you_ve_n_been_missed"
        android:textAlignment="center"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_login"
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/txt_welcome"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintTop_toBottomOf="@id/txt_welcome"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/edittextshape"
        android:hint="@string/email"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:inputType="textEmailAddress"
        android:id="@+id/editTextEmail"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/edittextshape"
        android:hint="@string/password"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:inputType="textPassword"
        android:id="@+id/editTextPassword"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        android:layout_marginTop="@dimen/_20sdp"
        android:visibility="gone"
        android:id="@+id/progressbar"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.95"
        app:layout_constraintTop_toBottomOf="@id/progressbar"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/sign_in"
        android:textSize="@dimen/_20sdp"
        app:cornerRadius="@dimen/_10sdp"
        android:backgroundTint="@color/mainColor"
        android:id="@+id/btnLogin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:text="@string/create_new_account"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:id="@+id/txt_create_new_account"
        />

</androidx.constraintlayout.widget.ConstraintLayout>